--- a/taotao-parent/taotao-manager-web/pom.xml
+++ b/taotao-parent/taotao-manager-web/pom.xml
@@ -20,7 +20,7 @@
         <!-- manager-interface接口 -->
         <dependency>
             <groupId>com.taotao</groupId>
-            <artifactId>taotao-manager-service</artifactId>
+            <artifactId>taotao-manager-interface</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <!-- Spring -->
@@ -72,6 +72,31 @@
             <groupId>commons-fileupload</groupId>
             <artifactId>commons-fileupload</artifactId>
         </dependency>
+        <!-- dubbo相关 -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>dubbo</artifactId>
+            <!-- 排除依赖 -->
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework</groupId>
+                    <artifactId>spring</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.jboss.netty</groupId>
+                    <artifactId>netty</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.zookeeper</groupId>
+            <artifactId>zookeeper</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.github.sgroschupf</groupId>
+            <artifactId>zkclient</artifactId>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
@@ -84,6 +109,8 @@
                     <path>/</path>
                 </configuration>
             </plugin>
+
         </plugins>
+
     </build>
 </project>
