--- a/taotao-parent/pom.xml
+++ b/taotao-parent/pom.xml
@@ -9,6 +9,7 @@
   <version>1.0-SNAPSHOT</version>
     <modules>
         <module>taotao-portal-web</module>
+        <module>taotao-content</module>
     </modules>
     <packaging>pom</packaging>
   <name>taotao-parent</name>
