--- a/taotao-parent/taotao-content/pom.xml
+++ b/taotao-parent/taotao-content/pom.xml
@@ -1,27 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>taotao-parent</artifactId>
         <groupId>com.taotao</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
-
-    <artifactId>taotao-manager</artifactId>
-    <packaging>pom</packaging>
-
-    <name>taotao-manager</name>
-    <!-- FIXME change it to the project's website -->
-    <url>http://www.example.com</url>
+     <modelVersion>4.0.0</modelVersion>
+     <artifactId>taotao-content</artifactId>
+     <packaging>pom</packaging>
     <modules>
-        <module>taotao-manager-pojo</module>
-        <module>taotao-manager-mapper</module>
-        <module>taotao-manager-service</module>
-        <module>taotao-manager-interface</module>
+        <module>taotao-content-interface</module>
+        <module>taotao-content-service</module>
     </modules>
-
     <dependencies>
         <!-- 依赖taotao-manager-common -->
         <dependency>
@@ -37,7 +29,7 @@
                 <groupId>org.apache.tomcat.maven</groupId>
                 <artifactId>tomcat7-maven-plugin</artifactId>
                 <configuration>
-                    <port>8080</port>
+                    <port>8083</port>
                     <path>/</path>
                 </configuration>
             </plugin>
