--- a/taotao-parent/taotao-content/taotao-content-service/pom.xml
+++ b/taotao-parent/taotao-content/taotao-content-service/pom.xml
@@ -1,34 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>taotao-parent</artifactId>
+        <artifactId>taotao-content</artifactId>
         <groupId>com.taotao</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>taotao-manager-web</artifactId>
+    <artifactId>taotao-content-service</artifactId>
     <packaging>war</packaging>
-
-    <name>taotao-manager-web Maven Webapp</name>
-    <!-- FIXME change it to the project's website -->
-    <url>http://www.example.com</url>
-
     <dependencies>
-        <!-- manager-interface接口 -->
+        <!-- 添加接口的依赖 -->
         <dependency>
             <groupId>com.taotao</groupId>
-            <artifactId>taotao-manager-interface</artifactId>
+            <artifactId>taotao-manager-mapper</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-        <!-- content-interface接口 -->
         <dependency>
             <groupId>com.taotao</groupId>
             <artifactId>taotao-content-interface</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
         <!-- Spring -->
         <dependency>
             <groupId>org.springframework</groupId>
@@ -58,25 +53,9 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-context-support</artifactId>
         </dependency>
-        <!-- JSP相关 -->
         <dependency>
-            <groupId>jstl</groupId>
-            <artifactId>jstl</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>servlet-api</artifactId>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>jsp-api</artifactId>
-            <scope>provided</scope>
-        </dependency>
-        <!-- 文件上传组件 -->
-        <dependency>
-            <groupId>commons-fileupload</groupId>
-            <artifactId>commons-fileupload</artifactId>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
         </dependency>
         <!-- dubbo相关 -->
         <dependency>
@@ -104,24 +83,33 @@
         </dependency>
         <dependency>
             <groupId>com.taotao</groupId>
-            <artifactId>taotao-content-interface</artifactId>
+            <artifactId>taotao-manager-interface</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
     </dependencies>
     <build>
+        <!-- maven 插件打包的时候需要加入,因为maven不会自动将.xml,.properties打包-->
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>**/*.properties</include>
+                    <include>**/*.xml</include>
+                </includes>
+                <filtering>false</filtering>
+            </resource>
+        </resources>
         <plugins>
-            <!-- 配置tomcat插件 -->
             <plugin>
-                <groupId>org.apache.tomcat.maven</groupId>
-                <artifactId>tomcat7-maven-plugin</artifactId>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.12.4</version>
                 <configuration>
-                    <port>8081</port>
-                    <path>/</path>
+                    <skipTests>true</skipTests>
                 </configuration>
             </plugin>
-
         </plugins>
-
     </build>
+
 </project>
