第二个阶段 今天做了分类节点内容的上传

--- a/taotao-parent/taotao-manager-web/pom.xml
+++ b/taotao-parent/taotao-manager-web/pom.xml
@@ -107,6 +107,11 @@
             <artifactId>taotao-content-interface</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <!--fastdfs的jar包-->
+        <dependency>
+            <groupId>fastdfs_client</groupId>
+            <artifactId>fastdfs_client</artifactId>
+        </dependency>
 
     </dependencies>
     <build>
