--- a/taotao-parent/pom.xml
+++ b/taotao-parent/pom.xml
@@ -46,6 +46,7 @@
     <activemq.version>5.13.0</activemq.version>
     <freemarker.version>2.3.23</freemarker.version>
     <quartz.version>2.2.2</quartz.version>
+    <fastdfs.version>1.25</fastdfs.version>
   </properties>
   <!-- 就是管理版本的标签   其下的dependencies标签只是版本的管理 并不依赖jar-->
   <dependencyManagement>
@@ -235,7 +236,11 @@
         <artifactId>freemarker</artifactId>
         <version>${freemarker.version}</version>
       </dependency>
-
+      <dependency>
+        <groupId>fastdfs_client</groupId>
+        <artifactId>fastdfs_client</artifactId>
+        <version>${fastdfs.version}</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
