--- a/taotao-parent/taotao-portal-web/pom.xml
+++ b/taotao-parent/taotao-portal-web/pom.xml
@@ -24,11 +24,11 @@
 
     <dependencies>
     <!-- manager-interface接口 -->
-    <!--<dependency>
+    <dependency>
         <groupId>com.taotao</groupId>
-        <artifactId>taotao-manager-interface</artifactId>
+        <artifactId>taotao-content-interface</artifactId>
         <version>1.0-SNAPSHOT</version>
-    </dependency>-->
+    </dependency>
     <!-- Spring -->
     <dependency>
         <groupId>org.springframework</groupId>
