--- a/taotao-parent/taotao-content/taotao-content-service/pom.xml
+++ b/taotao-parent/taotao-content/taotao-content-service/pom.xml
@@ -86,6 +86,11 @@
             <artifactId>taotao-manager-interface</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <!-- Redis客户端 -->
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+        </dependency>
 
     </dependencies>
     <build>
