第二个阶段 今天做了solr索引数据的导入

--- a/taotao-parent/pom.xml
+++ b/taotao-parent/pom.xml
@@ -10,6 +10,8 @@
     <modules>
         <module>taotao-portal-web</module>
         <module>taotao-content</module>
+      <module>taotao-search-web</module>
+      <module>taotao-search</module>
     </modules>
     <packaging>pom</packaging>
   <name>taotao-parent</name>
