--- a/taotao-parent/taotao-manager/taotao-manager-service/pom.xml
+++ b/taotao-parent/taotao-manager/taotao-manager-service/pom.xml
@@ -57,6 +57,11 @@
             <groupId>com.github.pagehelper</groupId>
             <artifactId>pagehelper</artifactId>
         </dependency>
+        <!--activemq-->
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-all</artifactId>
+        </dependency>
         <!-- dubbo相关 -->
         <dependency>
             <groupId>com.alibaba</groupId>
