--- a/taotao-parent/taotao-manager/taotao-manager-service/pom.xml
+++ b/taotao-parent/taotao-manager/taotao-manager-service/pom.xml
@@ -62,6 +62,11 @@
             <groupId>org.apache.activemq</groupId>
             <artifactId>activemq-all</artifactId>
         </dependency>
+        <!-- Redis客户端 -->
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+        </dependency>
         <!-- dubbo相关 -->
         <dependency>
             <groupId>com.alibaba</groupId>
